<resources>
    <string name="app_name">Playlist maker</string>
    <string name="searching">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="teh_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="searchingActivityWords">Раздел \"Поиск\" в разработке</string>
    <string name="mediaActivityWords">Раздел \"Медиатека\" в разработке</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="messageTheme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="practicumOffer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="practicumLink">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="email">BigD90@ya.ru</string>
    <string name="mailTo">mailto:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="internet_problem_text">Проблемы со связью</string>
    <string name="internet_problem_text2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="yoursSearched">Вы искали</string>
    <string name="bt_clear_search">Очистить историю</string>
    <string name="song_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="song_year">Год</string>
    <string name="song_ganre">Жанр</string>
    <string name="group_country">Страна</string>
    <string name="NoInternetConnection">Отсутствует интернет соединение</string>
    <string name="Connect_to_internet">Для корректной работы требуется подключить интернет соединение</string>
    <string name="OK">Ок</string>
    <string name="Cancel">Отмена</string>
    <string name="StartTime">00:00</string>
    <string name="Mediateka">Медиатека</string>
    <string name="Error">Что-то пошло не так. Попробуйте обновить</string>
    <string name="EmptyMediateka">Ваша медиатека пуста</string>
    <string name="EmptyMediatekaPlaylist">Вы не создали\n ни одного плейлиста</string>
    <string name="NewPlaylist">Новый плейлист</string>
    <string name="favourites_media">Избранное</string>
    <string name="playlists_media">Плейлисты</string>
    <string name="EditTextTitleNewPlaylist">Название*</string>
    <string name="EditTextDescriptionNewPlaylist">Описание</string>
    <string name="EditTextCreateNewPlaylist">Создать</string>
    <string name="save">Сохранить</string>
    <string name="TextViewNewPlaylist">Новый плейлист</string>
    <string name="dialogTitle">Запрос разрешения</string>
    <string name="askGivePermission">Разрешение на доcтуп к файлам необходим для установки картинки плейлиста. Вы можете предоставить разрешение в настройках приложения. Предоставить разрешение?</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="askDeleteOrCancel">Завершить создание плейлиста?</string>
    <string name="warnDeleteOrCancel">Все несохраненные данные будут потеряны</string>
    <string name="toEnd">Завершение</string>
    <string name="empty">""</string>
    <string name="play">Проигрывать песню</string>
    <string name="playlistCreated">Плейлист %1$s создан</string>
    <string name="oneTrack">трек</string>
    <string name="TwoThreeFourTrack">трека</string>
    <string name="ManyTracks">треков</string>
    <string name="addToPlayList">Добавить в плейлист</string>
    <string name="correct_information">Редактировать информацию</string>
    <string name="share">Поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="question_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>
    <string name="nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="remove_playlist">Хотите удалить плейлист?</string>
    <string name="refactor">Редактировать</string>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <plurals name="track_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

</resources>