<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="14dp"
    style="@style/MainColor">

    <TextView
        style="@style/MainTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_size"
        android:layout_marginEnd="210dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/search"
        android:layout_marginTop="40dp"
        android:text="@string/searching"
        app:icon="@drawable/ic_vector111"
        style="@style/ActivityMainButtonStyle"
        />

    <Button
        android:id="@+id/media"
        android:text="@string/media"
        app:icon="@drawable/ic_vector22"
        style="@style/ActivityMainButtonStyle"
        />

    <Button
        android:id="@+id/setting"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_vector333"
        style="@style/ActivityMainButtonStyle"
        />

</LinearLayout>