<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    style="@style/MainColor2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/normal_size"
    tools:context=".presentation.ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/backFromSetting"
        style="@style/MainTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_size"
        android:gravity="top"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchThemeMain"
        style="@style/ActivitySettingsButtonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/theme"
        android:thumb="@drawable/ic_knob"
        android:track="@drawable/ic_track"
        tools:ignore="TextViewEdits,TextContrastCheck" />

    <Button
        android:id="@+id/shareApplication"
        style="@style/ActivitySettingsButtonStyle"
        android:text="@string/share_app"
        app:icon="@drawable/ic_share_pic"
        tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_update"
        style="@style/ActivitySettingsButtonStyle"
        android:text="@string/teh_support"
        app:icon="@drawable/ic_group"
        tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/goToAgreement"
        style="@style/ActivitySettingsButtonStyle"
        android:text="@string/agreement"
        app:icon="@drawable/ic_arrow_right"
        tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

</LinearLayout>