<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet"
    app:behavior_fitToContents="true"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/header"
        android:layout_width="44dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/bottom_sheet_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/item"
        layout="@layout/playlist_small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/ya"
        android:text="@string/share"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/item"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/ya"
        android:text="@string/correct_information"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/share"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingTop="16dp"
        android:gravity="top"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/ya"
        android:text="@string/delete_playlist"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/change"
        app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>