<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenedPlaylistFragment">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/normal_size" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/normal_size" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/no_reply" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_btn"
        style="@style/toolbar"
        app:navigationIconTint="@color/black"
        android:layout_height="wrap_content"
        android:theme="@style/BaseRipple"
        app:layout_constraintBottom_toTopOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/name"
        style="@style/text_player"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginTop="@dimen/normal_size"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="24sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Gangsta rap" />

    <TextView
        android:id="@+id/year"
        style="@style/text_player"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="2022" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintBottom_toTopOf="@id/dots"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16">
        <TextView
            android:id="@+id/time"
            style="@style/text_for_recycler"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            tools:text="300 минут" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/empty"
            android:src="@drawable/circle"/>
        <TextView
            android:id="@+id/track_count"
            style="@style/text_for_recycler"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            android:ellipsize="middle"
            tools:text="98 треков"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/share_app"
        android:src="@drawable/ic_share_pic"
        app:tint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@id/dots"
        app:layout_constraintEnd_toStartOf="@id/dots"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintTop_toTopOf="@+id/dots" />

    <ImageButton
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/play"
        android:src="@drawable/fragment_dots"
        app:tint="?attr/colorOnSecondary"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/layout" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible">

        <include
            android:id="@+id/album_bottom"
            layout="@layout/album_bottom"
            tools:visibility="invisible" />

        <include
            android:id="@+id/bottom_sheet_dots"
            layout="@layout/bottom_dots" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>